# veyo

./: .gitignore  Cargo.toml  README.md  veyo.toml
bins/veyod/: Cargo.toml
bins/veyod/src/: config.rs  main.rs
crates/veyo-capture/: Cargo.toml
crates/veyo-capture/src/: backend.rs  downscale.rs  lib.rs  poll.rs
crates/veyo-core/: Cargo.toml
crates/veyo-core/src/: diff.rs  engine.rs  fsm.rs  habituation.rs  lib.rs  salience.rs  schema.rs
crates/veyo-enrich/: Cargo.toml
crates/veyo-enrich/src/: caption.rs  enrich.rs  lib.rs  ocr.rs  transcribe.rs  types.rs
crates/veyo-eval/: Cargo.toml
crates/veyo-eval/src/: decode.rs  downscale.rs  frame.rs  lib.rs  report.rs  score.rs  session.rs  synthetic.rs  tune.rs
crates/veyo-mcp/: Cargo.toml
crates/veyo-mcp/src/: lib.rs  server.rs  store.rs
crates/veyo-store/: Cargo.toml
crates/veyo-store/src/: lib.rs  store.rs
docs/: README.html  README.md  architecture.html  architecture.md  build.py  eval-harness.html  eval-harness.md  glossary.html  glossary.md  phases.html  phases.md  plan.html  plan.md  policy-engine.html  policy-engine.md  privacy-model.html  privacy-model.md  product-overview.html  product-overview.md  risks-and-open-questions.html  risks-and-open-questions.md  tech-specs.html  tech-specs.md
docs/.illuminate/: graph.db
docs/assets/: style.css
fixtures/sessions/: README.md
fixtures/sessions/scripted-web/: annotations.jsonl  frames.jsonl
recorder/: package-lock.json  package.json  record-session.mjs
