# veyo — Cargo workspace.
# Phase 0 ships only `veyo-core` (pure, no-I/O) — the schema + FSM + salience the
# eval harness drives offline. The remaining crates from the architecture doc
# (veyo-capture, veyo-enrich, veyo-store, veyo-mcp, veyo-eval, bins/veyod) join in
# their phases; they're listed here as commented members so the layout is explicit.
[workspace]
resolver = "2"
members = [
    "crates/veyo-core",
    "crates/veyo-eval",       # Phase 0: offline replay + scoring + tuning
    "crates/veyo-capture",    # Phase 1: live screen capture abstraction
    "crates/veyo-mcp",        # Phase 1: MCP server
    "crates/veyo-store",      # Phase 1+: sqlite event persistence
    "bins/veyod",             # Phase 1: daemon binary
    "crates/veyo-enrich",     # enrichment: transcript · OCR · salient-frame caption (drives clipxd's index)
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"          # open-core: permissive core daemon + schema
repository = "https://github.com/rohansx/veyo"
rust-version = "1.80"

# Shared dependency versions, pinned. Verified against crates.io at scaffold time.
[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.44", features = ["full"] }
anyhow = "1.0.102"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
xcap = "0.9.6"
clap = { version = "4.6", features = ["derive"] }
toml = "1.0"
rusqlite = "0.40"
rmcp = { version = "1.7.0", features = ["server", "transport-io", "macros"] }
schemars = "1"
