[package]
name = "veyo-capture"
description = "Live screen-capture backends for the veyo daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
veyo-core = { path = "../veyo-core" }
anyhow = { workspace = true }
xcap = { workspace = true }
tracing = { workspace = true }
