[package]
name = "veyo-mcp"
description = "MCP server that streams veyo deltas to LLM agents"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
veyo-core = { path = "../veyo-core" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
