[package]
name = "veyo-store"
description = "SQLite-backed append-only event store for veyo deltas"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
veyo-core = { path = "../veyo-core" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }
